--- a/404.md
+++ b/404.md
@@ -1,7 +1,6 @@
 ---
 permalink: /404.html
 ---
-
+**Oops! This page doesn't exist...**
 ![404](https://media.giphy.com/media/10aPXZKP8dzBwQ/giphy.gif)
 
-Oops! This page doesn't exist...
