--- a/404.md
+++ b/404.md
@@ -1,5 +1,7 @@
 ---
-permalink: /404.html
+permalink: /404
+title: Oops! This page doesn't exist...
+nav_exclude: true
 ---
 **Oops! This page doesn't exist...**
 
